# project-kun-demo

./: .env  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
backend/: pyproject.toml
backend/app/: app.py
backend/app/agents/: agents.py  prompts.py  supreme_agent.py
backend/app/data/: KUN ASL.xlsx  Quote_MSI_7_11_2024_KUN.xlsx  RTS-192-2024.xlsx
backend/app/extractors/: pdf_extractor.py  pdf_images.py
backend/app/rag_pipeline/: qdrant_indexer.py
docs/: README.MD
frontend/: app.js  controllers.js  index.html
frontend/controllers/: landingController.js  loginController.js  uploadController.js
frontend/services/: backendService.js
frontend/templates/: landing.html  login.html  upload.html
scripts/: README.md
test/: README.md
